[Andreas] Make it compatible with Java 8