@@ -6,18 +6,17 @@ import static com.andreouconsulting.skyparentalcontrol.movie.MovieRating.PG;
 import static com.andreouconsulting.skyparentalcontrol.movie.MovieRating.TWELVE;
 import static com.andreouconsulting.skyparentalcontrol.movie.MovieRating.U;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Stream;
 
 import com.andreouconsulting.skyparentalcontrol.exceptions.TechnicalFailureException;
 import com.andreouconsulting.skyparentalcontrol.movie.exceptions.TitleNotFoundException;
-import com.andreouconsulting.skyparentalcontrol.user.exceptions.UserNotFoundException;
 import org.springframework.stereotype.Service;
 
 @Service
 public class MovieServiceImpl implements MovieService {
-    private static List<Movie> movies = List.of(
+    private static List<Movie> movies = Arrays.asList(
             new Movie(UUID.fromString("c1ccf910-2ecc-4018-b476-5e8957b5ba00"), U),
             new Movie(UUID.fromString("c1ccf910-2ecc-4018-b476-5e8957b5ba10"), PG),
             new Movie(UUID.fromString("c1ccf910-2ecc-4018-b476-5e8957b5ba12"), TWELVE),
