@@ -6,10 +6,9 @@ import static com.andreouconsulting.skyparentalcontrol.movie.MovieRating.PG;
 import static com.andreouconsulting.skyparentalcontrol.movie.MovieRating.TWELVE;
 import static com.andreouconsulting.skyparentalcontrol.movie.MovieRating.U;
 
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Stream;
 
 import com.andreouconsulting.skyparentalcontrol.movie.MovieRating;
 import com.andreouconsulting.skyparentalcontrol.user.exceptions.UserNotFoundException;
@@ -17,7 +16,7 @@ import org.springframework.stereotype.Repository;
 
 @Repository
 public class UserRepository {
-    private static List<User> users = List.of(
+    private static List<User> users = Arrays.asList(
             new User(UUID.fromString("ce38a0b4-862f-456e-a08a-91f08181eb00"), U),
             new User(UUID.fromString("ce38a0b4-862f-456e-a08a-91f08181eb10"), PG),
             new User(UUID.fromString("ce38a0b4-862f-456e-a08a-91f08181eb12"), TWELVE),
